2007-04-27  Gautier Portet <kassoulet gmail com>

	* data/Makefile.am: Removed evil DESTDIR, thanks William!
	* Release 0.9.6

2007-04-25  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed error message when python-gstreamer is 
	  absent.
	* Release 0.9.5

2007-04-24  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Better checking of gstreamer elements.
	  Now we stop when required elements are missing, and we disable
	  encoders not present.
	  

2007-04-23  Gautier Portet <kassoulet gmail com>

	* data/: GNOME/FreeDesktop compliant icon handling. 
	  Refresh icon cache at (un)install.

2007-04-16  Gautier Portet <kassoulet gmail com>

	* po/ data/soundconverter.desktop: Desktop file translation enabled.

2007-04-15  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed quoting problem with destination folder
	  (#10884).
	* soundconverter.glade: Removed underline handling for destination folder.
	  (#10807)
	* data/: Minor fixes in icons/desktop handling. 
	    (#10808)
	  - Changed name to "Sound Converter"
	  - Removed Application from categories.


2007-04-08  Gautier Portet <kassoulet gmail com>

	* soundconverter.glade: Set into_selected_folder use_underline to false
	  so underscores in folder will not be interpreted by GTK.

2007-04-03  Gautier Portet <kassoulet gmail com>

	* po/hu.po: Added hungarian translation.

2007-03-16  Gautier Portet <kassoulet gmail com>

	* po/fr.po: Updated french translation. Changed email address of
	  french translator.

2007-03-05  Gautier Portet <kassoulet gmail com>

	* soundconverter: Use the new window icon.

2007-03-03  Gautier Portet <kassoulet gmail com>

	* soundconverter.Desktop: Applied HIG Complience patch from Ubuntu
	  maintainer (Thanks William)

2007-02-27  Gautier Portet <kassoulet gmail com>

	* soundconverter: Added a link to the website when mp3 encoding is :
	  unavailable, so hopefully it will dramatically reduce the number 
	  of emails I receive.