@@ -1,14 +1,15 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
+Name=No name
 _Name=Sound Converter
 _GenericName=Audio Format Converter
 _Comment=Convert audio files into other formats
 Icon=soundconverter
-MimeType=
+MimeType==application/x-ogg;application/ogg;audio/x-mp3;audio/x-scpls;audio/x-mp3;audio/x-mpeg;audio/mpeg;audio/x-mpegurl;application/x-flac;
 Exec=soundconverter %f
 Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GNOME;GTK;AudioVideo;
-
+GenericName[en_US]=
